[package]
name = "cat"
version = "0.1.0"
edition = "2021"

[lib]
name = "catlib"
path = "src/cat.rs"

[[bin]]
name = "cat"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
mktemp = { version = "0.4.1" }
rand = { version = "0.8.5" }
